--- a/PH_Jules_1.8
+++ b/PH_Jules_1.8
@@ -2,7 +2,7 @@
  * Controlador de PH Automático para Cultivo
  *
  * Autor: Jules (Assistente de IA)
- * Versão: 1.8
+ * Versão: 1.8 - Reescrito a partir da versão 1.7.1
  * Data: 2024-07-25
  *
  * Descrição:
